# Multi-Modal-AI-Framework-for-Robotic-Task-Automation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
knowledge_base/: manipulation_strategies.json
ros_integration/: CMakeLists.txt  package.xml
ros_integration/config/: controllers.yaml
ros_integration/launch/: ai_agent_system.launch.py  gazebo_simulation.launch.py
ros_integration/scripts/: ai_agent_node.py  robot_controller.py  send_command.sh  test_commands.sh
ros_integration/urdf/: robot_arm.urdf.xacro
ros_integration/worlds/: blocks_world.world
src/: __init__.py  agent.py  language_module.py  rag_module.py  vision_module.py
tests/: __init__.py  test_integration.py
